fixed: upcoming training table overflow on smaller screen

--- a/src/screens/Event Screen/style.css
+++ b/src/screens/Event Screen/style.css
@@ -7,6 +7,7 @@
   width: 80% !important;
 }
 .table-responsive-sm {
+  overflow: auto;
   margin-top: 20px;
   width: 80% !important;
 }
